StackHub/link-parser/src/main/java/antlr/LinkParserParser.java
// Generated from .\LinkParser.g4 by ANTLR 4.12.0
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LinkParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COLON=1, SLASH=2, HTTP=3, HTTPS=4, GITHUB=5, STACKOVERFLOW=6, QUESTIONS=7, 
		NUM=8, WS=9, ANY=10;
	public static final int
		RULE_link = 0, RULE_protocol = 1, RULE_server = 2, RULE_gitHub = 3, RULE_stackOverflow = 4, 
		RULE_anyUsername = 5, RULE_anyRepository = 6, RULE_questionId = 7, RULE_anyQuestionName = 8;
	private static String[] makeRuleNames() {
		return new String[] {
			"link", "protocol", "server", "gitHub", "stackOverflow", "anyUsername", 
			"anyRepository", "questionId", "anyQuestionName"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'/'", "'http'", "'https'", "'github.com/'", "'stackoverflow.com/'", 
			"'questions/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COLON", "SLASH", "HTTP", "HTTPS", "GITHUB", "STACKOVERFLOW", "QUESTIONS", 
			"NUM", "WS", "ANY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LinkParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LinkParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LinkContext extends ParserRuleContext {
		public ProtocolContext protocol() {
			return getRuleContext(ProtocolContext.class,0);
		}
		public TerminalNode COLON() { return getToken(LinkParserParser.COLON, 0); }
		public List<TerminalNode> SLASH() { return getTokens(LinkParserParser.SLASH); }
		public TerminalNode SLASH(int i) {
			return getToken(LinkParserParser.SLASH, i);
		}
		public ServerContext server() {
			return getRuleContext(ServerContext.class,0);
		}
		public LinkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_link; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinkParserVisitor ) return ((LinkParserVisitor<? extends T>)visitor).visitLink(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinkContext link() throws RecognitionException {
		LinkContext _localctx = new LinkContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_link);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(18);
			protocol();
			setState(19);
			match(COLON);
			setState(20);
			match(SLASH);
			setState(21);
			match(SLASH);
			setState(22);
			server();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProtocolContext extends ParserRuleContext {
		public TerminalNode HTTPS() { return getToken(LinkParserParser.HTTPS, 0); }
		public TerminalNode HTTP() { return getToken(LinkParserParser.HTTP, 0); }
		public ProtocolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_protocol; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinkParserVisitor ) return ((LinkParserVisitor<? extends T>)visitor).visitProtocol(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProtocolContext protocol() throws RecognitionException {
		ProtocolContext _localctx = new ProtocolContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_protocol);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			_la = _input.LA(1);
			if ( !(_la==HTTP || _la==HTTPS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ServerContext extends ParserRuleContext {
		public GitHubContext gitHub() {
			return getRuleContext(GitHubContext.class,0);
		}
		public StackOverflowContext stackOverflow() {
			return getRuleContext(StackOverflowContext.class,0);
		}
		public TerminalNode ANY() { return getToken(LinkParserParser.ANY, 0); }
		public ServerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_server; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinkParserVisitor ) return ((LinkParserVisitor<? extends T>)visitor).visitServer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ServerContext server() throws RecognitionException {
		ServerContext _localctx = new ServerContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_server);
		try {
			setState(29);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case GITHUB:
				enterOuterAlt(_localctx, 1);
				{
				setState(26);
				gitHub();
				}
				break;
			case STACKOVERFLOW:
				enterOuterAlt(_localctx, 2);
				{
				setState(27);
				stackOverflow();
				}
				break;
			case ANY:
				enterOuterAlt(_localctx, 3);
				{
				setState(28);
				match(ANY);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GitHubContext extends ParserRuleContext {
		public TerminalNode GITHUB() { return getToken(LinkParserParser.GITHUB, 0); }
		public AnyUsernameContext anyUsername() {
			return getRuleContext(AnyUsernameContext.class,0);
		}
		public List<TerminalNode> SLASH() { return getTokens(LinkParserParser.SLASH); }
		public TerminalNode SLASH(int i) {
			return getToken(LinkParserParser.SLASH, i);
		}
		public AnyRepositoryContext anyRepository() {
			return getRuleContext(AnyRepositoryContext.class,0);
		}
		public GitHubContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gitHub; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinkParserVisitor ) return ((LinkParserVisitor<? extends T>)visitor).visitGitHub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GitHubContext gitHub() throws RecognitionException {
		GitHubContext _localctx = new GitHubContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_gitHub);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			match(GITHUB);
			setState(32);
			anyUsername();
			setState(33);
			match(SLASH);
			setState(34);
			anyRepository();
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SLASH) {
				{
				setState(35);
				match(SLASH);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StackOverflowContext extends ParserRuleContext {
		public TerminalNode STACKOVERFLOW() { return getToken(LinkParserParser.STACKOVERFLOW, 0); }
		public TerminalNode QUESTIONS() { return getToken(LinkParserParser.QUESTIONS, 0); }
		public QuestionIdContext questionId() {
			return getRuleContext(QuestionIdContext.class,0);
		}
		public List<TerminalNode> SLASH() { return getTokens(LinkParserParser.SLASH); }
		public TerminalNode SLASH(int i) {
			return getToken(LinkParserParser.SLASH, i);
		}
		public AnyQuestionNameContext anyQuestionName() {
			return getRuleContext(AnyQuestionNameContext.class,0);
		}
		public StackOverflowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stackOverflow; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinkParserVisitor ) return ((LinkParserVisitor<? extends T>)visitor).visitStackOverflow(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StackOverflowContext stackOverflow() throws RecognitionException {
		StackOverflowContext _localctx = new StackOverflowContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stackOverflow);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(STACKOVERFLOW);
			setState(39);
			match(QUESTIONS);
			setState(40);
			questionId();
			setState(41);
			match(SLASH);
			setState(42);
			anyQuestionName();
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SLASH) {
				{
				setState(43);
				match(SLASH);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnyUsernameContext extends ParserRuleContext {
		public TerminalNode ANY() { return getToken(LinkParserParser.ANY, 0); }
		public AnyUsernameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anyUsername; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinkParserVisitor ) return ((LinkParserVisitor<? extends T>)visitor).visitAnyUsername(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnyUsernameContext anyUsername() throws RecognitionException {
		AnyUsernameContext _localctx = new AnyUsernameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_anyUsername);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(ANY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnyRepositoryContext extends ParserRuleContext {
		public TerminalNode ANY() { return getToken(LinkParserParser.ANY, 0); }
		public AnyRepositoryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anyRepository; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinkParserVisitor ) return ((LinkParserVisitor<? extends T>)visitor).visitAnyRepository(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnyRepositoryContext anyRepository() throws RecognitionException {
		AnyRepositoryContext _localctx = new AnyRepositoryContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_anyRepository);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(ANY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionIdContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(LinkParserParser.NUM, 0); }
		public QuestionIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionId; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinkParserVisitor ) return ((LinkParserVisitor<? extends T>)visitor).visitQuestionId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionIdContext questionId() throws RecognitionException {
		QuestionIdContext _localctx = new QuestionIdContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_questionId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnyQuestionNameContext extends ParserRuleContext {
		public TerminalNode ANY() { return getToken(LinkParserParser.ANY, 0); }
		public AnyQuestionNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anyQuestionName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinkParserVisitor ) return ((LinkParserVisitor<? extends T>)visitor).visitAnyQuestionName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnyQuestionNameContext anyQuestionName() throws RecognitionException {
		AnyQuestionNameContext _localctx = new AnyQuestionNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_anyQuestionName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(ANY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}